<resources>
    <string name="app_name">umpa_app</string>

    <string name="intent_key_zone">zone</string>

    <string-array name="watering_presets">
        <item>Brak</item>
        <item>Mało wymagające</item>
        <item>Średnio wymagające</item>
        <item>Wymagające</item>
        <item>Bardzo wymagające</item>
    </string-array>

    <string name="toast_data_save_failed">Błąd siecowy. Dane nie zostały zaktualizowane.</string>
    <string name="toast_connection_error">Błąd sieciowy. Nie można pobrać danych.</string>

    <string name="sunday">nd</string>
    <string name="monday">pn</string>
    <string name="tuesday">wt</string>
    <string name="wednesday">śr</string>
    <string name="thursday">cz</string>
    <string name="friday">pt</string>
    <string name="saturday">sb</string>

    <string name="sunday_full_name">niedziela</string>
    <string name="monday_full_name">poniedziałek</string>
    <string name="tuesday_full_name">wtorek</string>
    <string name="wednesday_full_name">środa</string>
    <string name="thursday_full_name">czwartek</string>
    <string name="friday_full_name">piątek</string>
    <string name="saturday_full_name">sobota</string>

    <string name="label_zone">Strefa</string>
    <string name="label_watering_preset">Profil</string>
    <string name="label_force_open_valve">Wymuś otwarcie zaworu</string>
    <string name="label_time_config">Konfiguracja zegara</string>
    <string name="label_station_config">Konfiguracja stacji</string>
    <string name="label_today_rain">Dzisiejsze opady</string>
    <string name="label_max_rain">Maksymalne opady</string>
    <string name="label_interval">Interwał</string>
    <string name="label_open_time">Czas otwarcia</string>
    <string name="label_close_time">Czas zamknięcia</string>
    <string name="label_active_days">Aktywne dni</string>
    <string name="label_intervallist_zone_id">Strefa %1$d</string>
</resources>